refactor(common): remove hutool dependency and replace usages with native utilities